# properly_thegraph_api

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  tox.ini
compose/: Makefile  bootstrap.sh  bootstrap.yml  env.sh  run.yml  runapp.sh
compose/dev/: run.yml
fixtures/aave/: flashLoans.json  flashLoans_100.json  flashLoans_1000.json
fixtures/coingecko/: coins_list.json  mana_eth.json  supported_vs_currencies.json
fixtures/decentraland/: nft_order_10.json  order_10.json  order_estate_10.json  order_parcel_10.json
properly_thegraph_api/: app.py  config.py  utils.py
properly_thegraph_api/aave/: api.py
properly_thegraph_api/aave/flashloans/: resources.py
properly_thegraph_api/decentraland/: api.py
properly_thegraph_api/decentraland/estate/: resources.py
properly_thegraph_api/decentraland/order/: resources.py  utils.py
properly_thegraph_api/estate/: api.py  resources.py
tests/: api_aave_flashloans_test.py  api_decentraland_estate_test.py  api_decentraland_order_test.py  app_test.py  conftest.py  consts.py  estate_test.py  fixture_aave_flashloan_test.py  fixture_coingecko_test.py  fixture_decentraland_nft_test.py  fixture_decentraland_order_test.py  utils.py
